Updates from current DS internal fallout