@@ -1,5 +1,5 @@
 /*
- * Copyright 2020 DataStax, Inc.
+ * Copyright 2021 DataStax, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,37 +18,45 @@ package com.datastax.fallout.ops;
 import java.util.ArrayList;
 import java.util.List;
 
-import com.google.common.collect.ImmutableList;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import com.datastax.fallout.TestHelpers;
-import com.datastax.fallout.ops.configmanagement.FakeConfigurationManager;
-import com.datastax.fallout.ops.provisioner.FakeProvisioner;
+import com.datastax.fallout.components.fakes.FakeConfigurationManager;
+import com.datastax.fallout.components.fakes.FakeProvisioner;
+import com.datastax.fallout.service.FalloutConfiguration;
 
-import static com.datastax.fallout.ops.MultiConfigurationManagerTest.ConfigurationManagerOperation.COLLECT_ARTIFACTS;
-import static com.datastax.fallout.ops.MultiConfigurationManagerTest.ConfigurationManagerOperation.STOP;
-import static com.datastax.fallout.ops.MultiConfigurationManagerTest.ConfigurationManagerOperation.UNCONFIGURE;
+import static com.datastax.fallout.assertj.Assertions.assertThat;
+import static com.datastax.fallout.ops.MultiConfigurationManagerTest.ConfigurationManagerOperation.*;
 import static com.datastax.fallout.ops.NodeGroupHelpers.assertSuccessfulTransition;
 import static com.datastax.fallout.ops.NodeGroupHelpers.waitForTransition;
-import static com.datastax.fallout.runner.CheckResourcesResultAssert.assertThat;
-import static org.assertj.core.api.Assertions.assertThat;
 
-public class MultiConfigurationManagerTest extends TestHelpers.FalloutTest
+public class MultiConfigurationManagerTest extends TestHelpers.FalloutTest<FalloutConfiguration>
 {
     enum ConfigurationManagerOperation
     {
-        UNCONFIGURE, STOP, COLLECT_ARTIFACTS
+        CONFIGURE, START, UNCONFIGURE, STOP, PREPARE_ARTIFACTS, COLLECT_ARTIFACTS
     }
 
-    static class StubConfigurationManager extends FakeConfigurationManager
+    static class FailingConfigurationManager extends FakeConfigurationManager
     {
         private final ConfigurationManagerOperation failingOperation;
 
-        private StubConfigurationManager(
-            ConfigurationManagerOperation failingOperation)
+        private FailingConfigurationManager(ConfigurationManagerOperation failingOperation)
         {
             this.failingOperation = failingOperation;
+        }
+
+        @Override
+        protected boolean configureImpl(NodeGroup nodeGroup)
+        {
+            return failingOperation != CONFIGURE;
+        }
+
+        @Override
+        protected boolean startImpl(NodeGroup nodeGroup)
+        {
+            return failingOperation != START;
         }
 
         @Override
@@ -64,6 +72,12 @@ public class MultiConfigurationManagerTest extends TestHelpers.FalloutTest
         }
 
         @Override
+        public boolean prepareArtifactsImpl(Node node)
+        {
+            return failingOperation != PREPARE_ARTIFACTS;
+        }
+
+        @Override
         protected boolean collectArtifactsImpl(Node node)
         {
             return failingOperation != COLLECT_ARTIFACTS;
@@ -73,6 +87,20 @@ public class MultiConfigurationManagerTest extends TestHelpers.FalloutTest
     static class MockConfigurationManager extends FakeConfigurationManager
     {
         private final List<ConfigurationManagerOperation> calledOperations = new ArrayList<>();
+
+        @Override
+        protected boolean configureImpl(NodeGroup nodeGroup)
+        {
+            calledOperations.add(CONFIGURE);
+            return true;
+        }
+
+        @Override
+        protected boolean startImpl(NodeGroup nodeGroup)
+        {
+            calledOperations.add(START);
+            return true;
+        }
 
         @Override
         protected boolean unconfigureImpl(NodeGroup nodeGroup)
@@ -89,6 +117,13 @@ public class MultiConfigurationManagerTest extends TestHelpers.FalloutTest
         }
 
         @Override
+        public boolean prepareArtifactsImpl(Node node)
+        {
+            calledOperations.add(PREPARE_ARTIFACTS);
+            return true;
+        }
+
+        @Override
         protected boolean collectArtifactsImpl(Node node)
         {
             calledOperations.add(COLLECT_ARTIFACTS);
@@ -100,10 +135,12 @@ public class MultiConfigurationManagerTest extends TestHelpers.FalloutTest
 
     private NodeGroup makeNodeGroupWithConfigurationManagerThatFailsAt(ConfigurationManagerOperation failingOperation)
     {
-        final ConfigurationManager stubConfigurationManager = new StubConfigurationManager(failingOperation);
+        final ConfigurationManager failingConfigurationManager1 = new FailingConfigurationManager(failingOperation);
+        final ConfigurationManager failingConfigurationManager2 = new FailingConfigurationManager(failingOperation);
 
         final MultiConfigurationManager multiConfigurationManager =
-            new MultiConfigurationManager(ImmutableList.of(stubConfigurationManager, mockConfigurationManager),
+            new MultiConfigurationManager(
+                List.of(failingConfigurationManager1, mockConfigurationManager, failingConfigurationManager2),
                 new WritablePropertyGroup());
 
         return NodeGroupBuilder.create()
@@ -112,12 +149,12 @@ public class MultiConfigurationManagerTest extends TestHelpers.FalloutTest
             .withPropertyGroup(new WritablePropertyGroup())
             .withNodeCount(1)
             .withName("test")
-            .withLoggers(new JobConsoleLoggers())
             .withTestRunArtifactPath(testRunArtifactPath())
+            .withTestRunScratchSpace(persistentTestScratchSpace())
             .build();
     }
 
-    @Before
+    @BeforeEach
     public void setup()
     {
         mockConfigurationManager = new MockConfigurationManager();
@@ -144,6 +181,16 @@ public class MultiConfigurationManagerTest extends TestHelpers.FalloutTest
     }
 
     @Test
+    public void a_failed_prepareArtifacts_does_not_prevent_other_prepareArtifacts()
+    {
+        NodeGroup nodeGroup = makeNodeGroupWithConfigurationManagerThatFailsAt(PREPARE_ARTIFACTS);
+
+        assertSuccessfulTransition(nodeGroup, NodeGroup.State.STARTED_SERVICES_RUNNING);
+        assertThat(nodeGroup.prepareArtifacts().join()).isFalse();
+        assertThat(mockConfigurationManager.calledOperations).contains(PREPARE_ARTIFACTS);
+    }
+
+    @Test
     public void a_failed_collectArtifacts_does_not_prevent_other_collectArtifacts()
     {
         NodeGroup nodeGroup = makeNodeGroupWithConfigurationManagerThatFailsAt(COLLECT_ARTIFACTS);
@@ -151,5 +198,23 @@ public class MultiConfigurationManagerTest extends TestHelpers.FalloutTest
         assertSuccessfulTransition(nodeGroup, NodeGroup.State.STARTED_SERVICES_CONFIGURED);
         assertThat(nodeGroup.collectArtifacts().join()).isFalse();
         assertThat(mockConfigurationManager.calledOperations).contains(COLLECT_ARTIFACTS);
+    }
+
+    @Test
+    public void a_failed_configure_prevents_other_configures()
+    {
+        NodeGroup nodeGroup = makeNodeGroupWithConfigurationManagerThatFailsAt(CONFIGURE);
+
+        assertThat(waitForTransition(nodeGroup, NodeGroup.State.STARTED_SERVICES_CONFIGURED)).wasNotSuccessful();
+        assertThat(mockConfigurationManager.calledOperations).doesNotContain(CONFIGURE);
+    }
+
+    @Test
+    public void a_failed_start_prevents_other_starts()
+    {
+        NodeGroup nodeGroup = makeNodeGroupWithConfigurationManagerThatFailsAt(START);
+
+        assertThat(waitForTransition(nodeGroup, NodeGroup.State.STARTED_SERVICES_RUNNING)).wasNotSuccessful();
+        assertThat(mockConfigurationManager.calledOperations).doesNotContain(START);
     }
 }
