@@ -1,5 +1,5 @@
 /*
- * Copyright 2020 DataStax, Inc.
+ * Copyright 2021 DataStax, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,7 +15,6 @@
  */
 package com.datastax.fallout.service.resources.server;
 
-import javax.ws.rs.core.GenericType;
 import javax.ws.rs.core.Response;
 
 import java.io.IOException;
@@ -24,65 +23,62 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.List;
+import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
+import java.util.function.Supplier;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipInputStream;
 
-import com.google.common.collect.ImmutableMap;
 import org.apache.commons.lang3.tuple.Pair;
-import org.junit.Before;
-import org.junit.ClassRule;
-import org.junit.Rule;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.extension.RegisterExtension;
 
 import com.datastax.fallout.harness.EnsembleFalloutTest;
 import com.datastax.fallout.harness.TestDefinition;
+import com.datastax.fallout.ops.utils.FileUtils;
 import com.datastax.fallout.runner.Artifacts;
 import com.datastax.fallout.service.FalloutConfiguration;
 import com.datastax.fallout.service.core.Test;
 import com.datastax.fallout.service.core.TestRun;
-import com.datastax.fallout.service.resources.FalloutServiceRule;
-import com.datastax.fallout.service.resources.FalloutServiceRule.FalloutServiceResetRule;
+import com.datastax.fallout.service.resources.FalloutAppExtension;
 import com.datastax.fallout.service.resources.RestApiBuilder;
+import com.datastax.fallout.util.Exceptions;
 
+import static com.datastax.fallout.assertj.Assertions.assertThat;
 import static com.datastax.fallout.service.core.Fakes.TEST_USER_EMAIL;
-import static com.datastax.fallout.service.core.TestAssert.assertThat;
-import static com.datastax.fallout.service.core.TestRun.State.ABORTED;
 import static com.datastax.fallout.service.core.TestRun.State.FAILED;
 import static com.datastax.fallout.service.core.TestRun.State.PASSED;
-import static com.datastax.fallout.service.core.TestRun.State.RUNNING;
-import static com.datastax.fallout.service.core.TestRunAssert.assertThat;
-import static javax.ws.rs.core.Response.Status.*;
-import static javax.ws.rs.core.ResponseAssert.assertThat;
-import static org.assertj.core.api.Assertions.assertThat;
+import static javax.ws.rs.core.Response.Status.BAD_REQUEST;
+import static javax.ws.rs.core.Response.Status.CREATED;
+import static javax.ws.rs.core.Response.Status.NOT_FOUND;
+import static javax.ws.rs.core.Response.Status.OK;
 
 public class TestResourceHttpTest
 {
-    public static abstract class Tests extends TestResourceTestBase
+    public static abstract class Tests extends TestResourceTestBase<FalloutAppExtension>
     {
         private RestApiBuilder adminApi;
 
-        protected abstract FalloutServiceRule getFalloutServiceRule();
-
-        protected abstract FalloutServiceResetRule getFalloutServiceResetRule();
-
-        @Before
-        public void setupRestApiBuilders()
+        protected Tests(FalloutAppExtension falloutAppExtension)
         {
-            api = getFalloutServiceResetRule().userApi();
-            adminApi = getFalloutServiceResetRule().adminApi();
+            super(falloutAppExtension);
         }
 
-        @org.junit.Test
-        public void fake_test_can_be_created_and_run() throws IOException
+        @BeforeEach
+        public void setupRestApiBuilders()
+        {
+            api = getFalloutServiceResetExtension().userApi();
+            adminApi = getFalloutServiceResetExtension().adminApi();
+        }
+
+        @org.junit.jupiter.api.Test
+        public void fake_test_can_be_created_and_run()
         {
             assertThat(createTest("/", "fakes")).hasStatusInfo(CREATED);
             assertThat(runTest("fakes")).hasState(PASSED);
         }
 
-        @org.junit.Test
+        @org.junit.jupiter.api.Test
         public void newly_created_tests_do_not_cause_NPEs_on_user_page()
         {
             assertThat(createTest("/", "fakes")).hasStatusInfo(CREATED);
@@ -91,7 +87,7 @@ public class TestResourceHttpTest
                 .hasStatusInfo(OK);
         }
 
-        @org.junit.Test
+        @org.junit.jupiter.api.Test
         public void newly_created_tests_have_size_on_disk_bytes_set_to_zero()
         {
             assertThat(createTest("/", "fakes")).hasStatusInfo(CREATED);
@@ -101,32 +97,31 @@ public class TestResourceHttpTest
                 .hasSizeOnDiskBytes(0L);
         }
 
-        @org.junit.Test
-        public void fake_test_can_be_edited_and_run() throws IOException
+        @org.junit.jupiter.api.Test
+        public void fake_test_can_be_edited_and_run()
         {
             assertThat(createTest("/", "fakes")).hasStatusInfo(CREATED);
             assertThat(editTest("/", "fakes-edited", "fakes")).hasStatusInfo(OK);
             assertThat(runTest("fakes")).hasState(PASSED);
         }
 
-        @org.junit.Test
-        public void fake_test_can_be_created_via_edit_and_run() throws IOException
+        @org.junit.jupiter.api.Test
+        public void fake_test_can_be_created_via_edit_and_run()
         {
             assertThat(editTest("/", "fakes-edited", "fakes")).hasStatusInfo(CREATED);
             assertThat(runTest("fakes")).hasState(PASSED);
         }
 
-        @org.junit.Test
-        public void default_template_values_are_used() throws IOException
+        @org.junit.jupiter.api.Test
+        public void default_template_values_are_used()
         {
             assertThat(createTest("/template-test-yamls/", "complete-defaults")).hasStatusInfo(CREATED);
             assertThat(runTest("complete-defaults")).hasState(PASSED);
         }
 
-        @org.junit.Test
+        @org.junit.jupiter.api.Test
         public void
             templated_test_run_displays_default_and_actual_template_params_and_displayed_yaml_can_be_run_correctly()
-                throws IOException
         {
             assertThat(createTest("/template-test-yamls/", "complete-defaults")).hasStatusInfo(CREATED);
 
@@ -138,7 +133,7 @@ public class TestResourceHttpTest
             String definitionWithTemplateParams = testRun.getDefinitionWithTemplateParams();
 
             String expectedTestRunDefinition = String.format(
-                EnsembleFalloutTest.readYamlFile("/template-test-yamls/complete-defaults-with-run-params.yaml"),
+                EnsembleFalloutTest.readSharedYamlFile("/template-test-yamls/complete-defaults-with-run-params.yaml"),
                 testRun.getTestRunId().toString()
             );
             assertThat(expectedTestRunDefinition).isEqualTo(definitionWithTemplateParams);
@@ -168,8 +163,8 @@ public class TestResourceHttpTest
                 .orElse(Pair.of(Optional.empty(), Optional.empty()));
         }
 
-        @org.junit.Test
-        public void untemplated_test_run_displays_params_if_present() throws IOException
+        @org.junit.jupiter.api.Test
+        public void untemplated_test_run_displays_params_if_present()
         {
             assertThat(createTest("/", "fakes")).hasStatusInfo(CREATED);
 
@@ -178,7 +173,7 @@ public class TestResourceHttpTest
             assertThat(testRun).hasState(PASSED);
 
             final String originalDefinition =
-                EnsembleFalloutTest.readYamlFile("/fakes.yaml");
+                EnsembleFalloutTest.readSharedYamlFile("/fakes.yaml");
 
             final Pair<Optional<String>, String> defaultsYamlAndDefinitionYaml = TestDefinition
                 .splitDefaultsAndDefinition(testRun.getDefinitionWithTemplateParams());
@@ -196,44 +191,44 @@ public class TestResourceHttpTest
             assertThat(testRunDefinition).isEqualTo(originalDefinition);
         }
 
-        @org.junit.Test
-        public void test_run_does_not_display_template_params_if_no_params() throws IOException
+        @org.junit.jupiter.api.Test
+        public void test_run_does_not_display_template_params_if_no_params()
         {
             assertThat(createTest("/", "fakes")).hasStatusInfo(CREATED);
 
             TestRun testRun = runTest("fakes");
             assertThat(testRun).hasState(PASSED);
 
-            assertThat(EnsembleFalloutTest.readYamlFile("/fakes.yaml"))
+            assertThat(EnsembleFalloutTest.readSharedYamlFile("/fakes.yaml"))
                 .isEqualTo(testRun.getDefinitionWithTemplateParams());
         }
 
-        @org.junit.Test
-        public void create_test_fails_on_missing_default_template_tag_values() throws IOException
+        @org.junit.jupiter.api.Test
+        public void create_test_fails_on_missing_default_template_tag_values()
         {
             final Response response = createTest("/template-test-yamls/", "partial-defaults");
             assertThat(response).hasStatusInfo(BAD_REQUEST);
             assertThat(response.readEntity(String.class)).contains("no_default_provided_for_this_tag");
         }
 
-        @org.junit.Test
-        public void tag_values_can_be_overridden_using_json() throws IOException
+        @org.junit.jupiter.api.Test
+        public void tag_values_can_be_overridden_using_json()
         {
             assertThat(createTest("/template-test-yamls/", "complete-defaults")).hasStatusInfo(CREATED);
-            assertThat(runTest("complete-defaults", ImmutableMap.of("dummy_module", "fail")))
+            assertThat(runTest("complete-defaults", Map.of("dummy_module", "fail")))
                 .hasState(FAILED);
         }
 
-        @org.junit.Test
-        public void tag_values_can_be_overridden_using_yaml() throws IOException
+        @org.junit.jupiter.api.Test
+        public void tag_values_can_be_overridden_using_yaml()
         {
             assertThat(createTest("/template-test-yamls/", "complete-defaults")).hasStatusInfo(CREATED);
             assertThat(runTest("complete-defaults", "dummy_module: fail"))
                 .hasState(FAILED);
         }
 
-        @org.junit.Test
-        public void tag_values_can_be_overridden_using_query_params() throws IOException
+        @org.junit.jupiter.api.Test
+        public void tag_values_can_be_overridden_using_query_params()
         {
             assertThat(createTest("/template-test-yamls/", "complete-defaults")).hasStatusInfo(CREATED);
 
@@ -244,34 +239,33 @@ public class TestResourceHttpTest
         }
 
         public void assertThatRerunTestrunWithCloneUsesTheSpecifiedDefinition(boolean clone, String definitionPath)
-            throws IOException
         {
             assertThat(createTest("/", "fakes")).hasStatusInfo(CREATED);
 
             final TestRun testRun = runTest("fakes");
             assertThat(testRun).hasState(PASSED);
-            assertThat(testRun.getDefinition()).isEqualTo(EnsembleFalloutTest.readYamlFile("/fakes.yaml"));
+            assertThat(testRun.getDefinition()).isEqualTo(EnsembleFalloutTest.readSharedYamlFile("/fakes.yaml"));
 
             assertThat(editTest("/", "fakes-edited", "fakes")).hasStatusInfo(OK);
 
             final TestRun cloned = reRunTestWithClone(testRun, clone);
             assertThat(cloned).hasState(PASSED);
-            assertThat(cloned.getDefinition()).isEqualTo(EnsembleFalloutTest.readYamlFile(definitionPath));
+            assertThat(cloned.getDefinition()).isEqualTo(EnsembleFalloutTest.readSharedYamlFile(definitionPath));
         }
 
-        @org.junit.Test
-        public void rerun_testrun_with_clone_uses_the_definition_of_the_testrun_and_not_the_test() throws IOException
+        @org.junit.jupiter.api.Test
+        public void rerun_testrun_with_clone_uses_the_definition_of_the_testrun_and_not_the_test()
         {
             assertThatRerunTestrunWithCloneUsesTheSpecifiedDefinition(true, "/fakes.yaml");
         }
 
-        @org.junit.Test
-        public void rerun_testrun_without_clone_uses_the_definition_of_the_test() throws IOException
+        @org.junit.jupiter.api.Test
+        public void rerun_testrun_without_clone_uses_the_definition_of_the_test()
         {
             assertThatRerunTestrunWithCloneUsesTheSpecifiedDefinition(false, "/fakes-edited.yaml");
         }
 
-        public void assertThatRerunTestrunReusesTheTemplateParameters(boolean clone) throws IOException
+        public void assertThatRerunTestrunReusesTheTemplateParameters(boolean clone)
         {
             assertThat(createTest("/", "fakes")).hasStatusInfo(CREATED);
 
@@ -279,104 +273,27 @@ public class TestResourceHttpTest
 
             final TestRun testRun = runTest("fakes", templateParams);
             assertThat(testRun).hasState(PASSED);
-            assertThat(testRun).hasTemplateParamsMap(ImmutableMap.of("foo", "bar"));
+            assertThat(testRun).hasTemplateParamsMap(Map.of("foo", "bar"));
 
             final TestRun cloned = reRunTestWithClone(testRun, clone);
             assertThat(cloned).hasState(PASSED);
-            assertThat(cloned).hasTemplateParamsMap(ImmutableMap.of("foo", "bar"));
+            assertThat(cloned).hasTemplateParamsMap(Map.of("foo", "bar"));
         }
 
-        @org.junit.Test
-        public void rerun_testrun_with_clone_reuses_the_template_parameters() throws IOException
+        @org.junit.jupiter.api.Test
+        public void rerun_testrun_with_clone_reuses_the_template_parameters()
         {
             assertThatRerunTestrunReusesTheTemplateParameters(true);
         }
 
-        @org.junit.Test
-        public void rerun_testrun_without_clone_reuses_the_template_parameters() throws IOException
+        @org.junit.jupiter.api.Test
+        public void rerun_testrun_without_clone_reuses_the_template_parameters()
         {
             assertThatRerunTestrunReusesTheTemplateParameters(false);
         }
 
-        @org.junit.Test
-        public void abort_and_requeue_running_test_runs_works() throws IOException
-        {
-            // create test
-            Response response = createTest("/testrunner-test-yamls/", "abortable-sleep");
-            assertThat(response).hasStatusInfo(CREATED);
-            Test test = response.readEntity(Test.class);
-
-            final int numberOfTestRuns = 3;
-
-            // create testruns with different parameters
-            List<TestRun> originalTestRuns = IntStream.range(0, numberOfTestRuns)
-                .mapToObj(param -> startTest(test.getName(), "param: " + param))
-                .collect(Collectors.toList());
-
-            // wait for them to start
-            originalTestRuns = waitForTestRunsToSatisfy(originalTestRuns, testRun -> testRun.getState() == RUNNING);
-
-            // stop the testrunner
-            assertThat(
-                adminApi
-                    .build(TestResource.class, "requestShutdownAPI")
-                    .post(null))
-                        .hasStatusInfo(NO_CONTENT);
-
-            // check that the original testruns are listed
-            List<TestRun> allTestRuns = api
-                .build(TestResource.class, "listTestRunsApi", test.getOwner(), test.getName())
-                .get(new GenericType<List<TestRun>>()
-                {
-                });
-            assertThat(allTestRuns).containsExactlyInAnyOrderElementsOf(originalTestRuns);
-
-            // abort and requeue
-            response = adminApi.build(TestResource.class, "abortAndRequeueRunningTestRuns").post(null);
-            assertThat(response).hasStatusInfo(OK);
-            List<TestRun> requeued = response.readEntity(new GenericType<List<TestRun>>()
-            {
-            });
-
-            // check that new testruns have the same template params
-            assertThat(
-                requeued.stream()
-                    .map(testRun -> (Integer) testRun.getTemplateParamsMap().get("param"))
-                    .collect(Collectors.toList()))
-                        .containsExactlyInAnyOrder(
-                            IntStream.range(0, numberOfTestRuns).boxed().toArray(Integer[]::new));
-
-            // ...but not the same IDs
-            assertThat(
-                requeued.stream()
-                    .map(testRun -> testRun.getTestRunId())
-                    .collect(Collectors.toList()))
-                        .doesNotContainAnyElementsOf(originalTestRuns.stream()
-                            .map(TestRun::getTestRunId).collect(Collectors.toList()));
-
-            // check that the list of testruns contains the new testruns
-            allTestRuns = api
-                .build(TestResource.class, "listTestRunsApi", test.getOwner(), test.getName())
-                .get(new GenericType<List<TestRun>>()
-                {
-                });
-            assertThat(allTestRuns).containsAll(requeued);
-
-            // check that existing testruns are aborted
-            originalTestRuns = waitForTestRunsToSatisfy(originalTestRuns, testRun -> testRun.getState().finished());
-
-            assertThat(originalTestRuns).allSatisfy(testRun -> assertThat(testRun).hasState(ABORTED));
-
-            // Restart the queue
-            assertThat(adminApi.build(TestResource.class, "cancelShutdown").post(null)).hasStatusInfo(NO_CONTENT);
-
-            // Wait for requeued test runs to complete
-            assertThat(waitForTestRunsToSatisfy(requeued, testRun -> testRun.getState().finished()))
-                .allSatisfy(testRun -> assertThat(testRun).hasState(PASSED));
-        }
-
-        @org.junit.Test
-        public void delete_test_runs_works() throws IOException
+        @org.junit.jupiter.api.Test
+        public void delete_test_runs_works()
         {
             assertThat(createTest("/", "fakes")).hasStatusInfo(CREATED);
 
@@ -392,8 +309,8 @@ public class TestResourceHttpTest
                 testRun.getTestRunId().toString()).get()).hasStatusInfo(NOT_FOUND);
         }
 
-        @org.junit.Test
-        public void delete_test_works() throws IOException
+        @org.junit.jupiter.api.Test
+        public void delete_test_works()
         {
             assertThat(createTest("/", "fakes")).hasStatusInfo(CREATED);
 
@@ -407,8 +324,8 @@ public class TestResourceHttpTest
             assertThat(api.build("tests/" + TEST_USER_EMAIL + "/fakes/api").get()).hasStatusInfo(NOT_FOUND);
         }
 
-        @org.junit.Test
-        public void restore_test_works() throws IOException
+        @org.junit.jupiter.api.Test
+        public void restore_test_works()
         {
             assertThat(createTest("/", "fakes")).hasStatusInfo(CREATED);
 
@@ -431,8 +348,8 @@ public class TestResourceHttpTest
             }
         }
 
-        @org.junit.Test
-        public void restore_test_run_works() throws IOException
+        @org.junit.jupiter.api.Test
+        public void restore_test_run_works()
         {
             assertThat(createTest("/", "fakes")).hasStatusInfo(CREATED);
 
@@ -457,8 +374,8 @@ public class TestResourceHttpTest
             }
         }
 
-        @org.junit.Test
-        public void delete_deleted_test_forever_works() throws IOException
+        @org.junit.jupiter.api.Test
+        public void delete_deleted_test_forever_works()
         {
             Response test = createTest("/", "fakes");
             assertThat(test).hasStatusInfo(CREATED);
@@ -475,7 +392,7 @@ public class TestResourceHttpTest
                 testRun.getTestRunId().toString()).get()).hasStatusInfo(NOT_FOUND);
         }
 
-        @org.junit.Test
+        @org.junit.jupiter.api.Test
         public void download_artifacts_as_zip_works() throws IOException
         {
             //create and run test
@@ -485,7 +402,8 @@ public class TestResourceHttpTest
             assertThat(testRun).hasState(PASSED);
             //rename artifact
             String artifactLocation = Paths
-                .get(Artifacts.buildTestRunArtifactPath(getFalloutServiceRule().getArtifactPath(), testRun).toString())
+                .get(Artifacts.buildTestRunArtifactPath(getFalloutApp().getArtifactPath(), testRun)
+                    .toString())
                 .toString();
             Path sharedLog = Paths.get(artifactLocation, "fallout-shared.log");
             assertThat(sharedLog).exists();
@@ -517,47 +435,90 @@ public class TestResourceHttpTest
 
     public static class UsingStandaloneServer extends Tests
     {
-        @ClassRule
-        public static final FalloutServiceRule FALLOUT_SERVICE_RULE =
-            new FalloutServiceRule(FalloutConfiguration.ServerMode.STANDALONE);
+        @RegisterExtension
+        public static final FalloutAppExtension FALLOUT_SERVICE =
+            new FalloutAppExtension(FalloutConfiguration.ServerMode.STANDALONE);
 
-        @Rule
-        public final FalloutServiceResetRule FALLOUT_SERVICE_RESET_RULE =
-            FALLOUT_SERVICE_RULE.resetRule();
-
-        @Override
-        protected FalloutServiceRule getFalloutServiceRule()
+        public UsingStandaloneServer()
         {
-            return FALLOUT_SERVICE_RULE;
+            super(FALLOUT_SERVICE);
         }
 
-        @Override
-        protected FalloutServiceResetRule getFalloutServiceResetRule()
+        @org.junit.jupiter.api.Test
+        public void updating_artifacts_updates_the_artifact_list_and_the_test_size()
         {
-            return FALLOUT_SERVICE_RESET_RULE;
+            final var test = createTest("/", "fakes").readEntity(Test.class);
+
+            var testRun = runTest("fakes");
+            assertThat(testRun).hasState(PASSED);
+
+            final var newArtifact = "surprise.txt";
+
+            final var newArtifactPath =
+                Artifacts.buildTestRunArtifactPath(getFalloutApp().getArtifactPath(), testRun)
+                    .resolve(newArtifact);
+
+            Supplier<TestRun> getTestRunWithUpdatedArtifacts = () -> {
+                assertThat(api
+                    .build(TestResource.class, "updateFinishedTestRunArtifacts",
+                        testRun.getOwner(), testRun.getTestName(), testRun.getTestRunId())
+                    .post(null)
+                    .getStatusInfo())
+                        .hasFamily(Response.Status.Family.SUCCESSFUL);
+
+                return api.build(TestResource.uriForGetTestRunApi(testRun).getPath()).get(TestRun.class);
+            };
+
+            Supplier<Test> getTest =
+                () -> api.build(TestResource.class, "getTestApi", test.getOwner(), test.getName())
+                    .get(Test.class);
+
+            final var originalTestRunSize = testRun.getArtifactsSizeBytes().get();
+
+            assertThat(testRun.getArtifacts()).doesNotContainKey(newArtifact);
+
+            final var newArtifactContent = "boo!";
+            FileUtils.writeString(newArtifactPath, newArtifactContent);
+
+            assertThat(getTestRunWithUpdatedArtifacts.get()).satisfies(testRun_ -> {
+                assertThat(testRun_.getArtifacts()).containsKey(newArtifact);
+                assertThat(testRun_.getArtifactsSizeBytes())
+                    .hasValue(originalTestRunSize + newArtifactContent.length())
+                    .hasValue(getTest.get().getSizeOnDiskBytes());
+            });
+
+            Exceptions.runUncheckedIO(() -> Files.delete(newArtifactPath));
+
+            assertThat(getTestRunWithUpdatedArtifacts.get()).satisfies(testRun_ -> {
+                assertThat(testRun_.getArtifacts()).doesNotContainKey(newArtifact);
+                assertThat(testRun_.getArtifactsSizeBytes())
+                    .hasValue(originalTestRunSize)
+                    .hasValue(getTest.get().getSizeOnDiskBytes());
+            });
         }
     }
 
     public static class UsingQueueServer extends Tests
     {
-        @ClassRule
-        public static final FalloutServiceRule FALLOUT_SERVICE_RULE =
-            new FalloutServiceRule(FalloutConfiguration.ServerMode.QUEUE);
+        @RegisterExtension
+        public static final FalloutAppExtension FALLOUT_SERVICE =
+            new FalloutAppExtension(FalloutConfiguration.ServerMode.QUEUE);
 
-        @Rule
-        public final FalloutServiceResetRule FALLOUT_SERVICE_RESET_RULE =
-            FALLOUT_SERVICE_RULE.resetRule();
-
-        @Override
-        protected FalloutServiceRule getFalloutServiceRule()
+        public UsingQueueServer()
         {
-            return FALLOUT_SERVICE_RULE;
+            super(FALLOUT_SERVICE);
         }
 
-        @Override
-        protected FalloutServiceResetRule getFalloutServiceResetRule()
+        @org.junit.jupiter.api.Test
+        public void running_a_test_with_a_corrupted_user_fails()
         {
-            return FALLOUT_SERVICE_RESET_RULE;
+            final var corruptUserApi = getFalloutServiceResetExtension().corruptUserApi();
+
+            assertThat(createTest(corruptUserApi, "/", "fakes"))
+                .hasStatusInfo(CREATED);
+
+            final var testRun = runTest(corruptUserApi, "fakes");
+            assertThat(testRun).hasState(FAILED);
         }
     }
 }
