@@ -1,5 +1,5 @@
 /*
- * Copyright 2020 DataStax, Inc.
+ * Copyright 2021 DataStax, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,57 +15,69 @@
  */
 package com.datastax.fallout.service.core;
 
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Paths;
-import java.util.Collections;
 import java.util.Map;
 import java.util.UUID;
 
-import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.FilenameUtils;
 
+import com.datastax.fallout.ops.utils.FileUtils;
+import com.datastax.fallout.service.db.UserGroupMapper;
 import com.datastax.fallout.test.utils.WithTestResources;
-import com.datastax.fallout.util.Exceptions;
 
 public class Fakes
 {
     private static final String TEST_USER_NAME = "fallout-unittest-user";
     public static final String TEST_USER_EMAIL = TEST_USER_NAME + "@example.com";
     public static final String TEST_NAME = "testName";
+    public static final UUID TEST_RUN_ID = UUID.fromString("FA110072-D811-4B2C-B08F-000000000000");
+    public static final TestRunIdentifier TEST_RUN_IDENTIFIER =
+        new TestRunIdentifier(TEST_USER_EMAIL, TEST_NAME, TEST_RUN_ID);
     private static final String UNIT_TEST_GOOGLE_SERVICE_ACCOUNT_JSON_FILE =
         "UNIT_TEST_GOOGLE_SERVICE_ACCOUNT_JSON_FILE";
+    public static final String TEST_REGISTRY = "docker-registry.example.com";
 
     public static User makeUser()
     {
         User user = new User();
         user.setName(TEST_USER_NAME);
         user.setEmail(TEST_USER_EMAIL);
-        user.addGoogleCloudServiceAccount(new User.GoogleCloudServiceAccount()
+        user.setGroup(UserGroupMapper.UserGroup.OTHER);
+        user.addNebulaAppCred(new User.NebulaAppCred("bogus", "bogus", "bogus"));
+        // the following creds are needed for examples + ATRB-Test
+        user.addNebulaAppCred(new User.NebulaAppCred("moonshot-v1", "moon_v1", "fake-secret"));
+        user.addNebulaAppCred(new User.NebulaAppCred("moonshot-v2", "moon_v2", "fake-secret"));
+        user.addNebulaAppCred(new User.NebulaAppCred("dse-automation", "dse", "fake-secret"));
+        user.addGoogleCloudServiceAccount(createGCloudServiceAccount());
+        user.addAstraCred(new User.AstraServiceAccount(
+            "fake-client-id",
+            "fake-client-name",
+            "fake-client-secret"));
+        user.addDockerRegistryCredential(new User.DockerRegistryCredential(TEST_REGISTRY, "user", "docker-password"));
+        return user;
+    }
+
+    private static User.GoogleCloudServiceAccount createGCloudServiceAccount()
+    {
+        String existingKeyFileJsonFromEnv = System.getenv(UNIT_TEST_GOOGLE_SERVICE_ACCOUNT_JSON_FILE);
+        if (existingKeyFileJsonFromEnv != null)
         {
+            return User.GoogleCloudServiceAccount.fromJson(
+                FileUtils.readString(Paths.get(existingKeyFileJsonFromEnv)));
+        }
+        return new User.GoogleCloudServiceAccount() {
             {
                 email = "fake-service-account@google-cloud.example.com";
                 project = "fake-project";
                 privateKeyId = "fake-private-key-id";
-                keyFileJson = maybeGetKeyFileJsonFromEnv();
+                keyFileJson = "{\"fake\": 1}";
             }
-        });
-        return user;
-    }
-
-    private static String maybeGetKeyFileJsonFromEnv()
-    {
-        String existingKeyFileJsonFromEnv = System.getenv(UNIT_TEST_GOOGLE_SERVICE_ACCOUNT_JSON_FILE);
-        if (existingKeyFileJsonFromEnv == null)
-        {
-            return "{\"fake\": 1}";
-        }
-        return Exceptions.getUncheckedIO(
-            () -> FileUtils.readFileToString(Paths.get(existingKeyFileJsonFromEnv).toFile(), StandardCharsets.UTF_8));
+        };
     }
 
     public static class UUIDFactory
     {
-        private UUID currentUuid = UUID.fromString("FA110072-D811-4B2C-B08F-000000000000");
+        private UUID currentUuid = TEST_RUN_ID;
 
         public UUIDFactory()
         {
@@ -99,7 +111,7 @@ public class Fakes
 
         public TestRun makeTestRun(Test test)
         {
-            return makeTestRun(test, Collections.emptyMap());
+            return makeTestRun(test, Map.of());
         }
 
         public TestRun makeTestRun(Test test, Map<String, Object> templateParams)
